[fix]CmdStructure